cd/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
spec:
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - name: green-app
        image: luizmandico/green-app:1.1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
