cd/services-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-svc
spec:
  selector:
    app: green-app
  ports:
  - port: 80
    targetPort: 80
