cd/services-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  selector:
    app: green-app
  ports:
  - port: 80
    targetPort: 80
